--- a/galeria.html
+++ b/galeria.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/estilos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
 
@@ -85,6 +86,7 @@
     <!-- boostrap -->
 
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+        <h3 class="text_bootstrap">Carousel Slider</h3>
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -92,13 +94,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/b1 (1).jpg" class="d-block w-100" alt="...">
+            <img src="img/flor (1).jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/b1 (2).jpg" class="d-block w-100" alt="...">
+            <img src="img/flor (2).jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/b1 (3).jpg" class="d-block w-100" alt="...">
+            <img src="img/flor (3).jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -127,6 +129,13 @@
         </form>
     </div>
     </footer>
+
+
+
+
+
+    <!-- COntroles JavaScript de Boostrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 </body>
 </html>
